[gd_scene load_steps=2 format=3 uid="uid://cxsiarlaf5kwm"]

[ext_resource type="Script" uid="uid://dw8kcivigrqec" path="res://lobby/tank_select.gd" id="1"]

[node name="TankSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TankSelect#Panel" type="Panel" parent="."]
layout_mode = 0

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 66.0
offset_right = 617.0
offset_bottom = 89.0
text = "Select your Tank"

[node name="TanksContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 438.0
offset_top = 214.0
offset_right = 438.0
offset_bottom = 214.0

[node name="PlayersPanel" type="Panel" parent="."]
layout_mode = 0

[node name="PlayersList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 182.0
offset_right = 127.0
offset_bottom = 182.0

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 534.0
offset_right = 598.0
offset_bottom = 565.0
text = "Start Game"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 533.0
offset_right = 224.0
offset_bottom = 564.0
text = "Back"
